--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,11 +1,12 @@
 @import "~bulma/sass/utilities/initial-variables"
 
+$bgcolor: rgba(207, 216, 220, 0.3);
 // Config vars
-$kaldi-red: #FD461E
-$kaldi-red-invert: #fff
+$bv-blue: #3b8ed6
+$bv-blue-invert: #fff
 
-$primary: $kaldi-red
-$primary-invert: $kaldi-red-invert
+$primary: $bv-blue
+$primary-invert: $bv-blue-invert
 
 .content .taglist
   list-style: none
